@@ -23,7 +23,7 @@
     "- [expression](automaton.expression.ipynb) - compute an equivalent expression using the Brzozowski-McCluskey state-elimination procedure\n",
     "- [factor](automaton.factor.ipynb) - an automaton that accepts the factor language of another\n",
     "- [filter](automaton.filter.ipynb) - focus on a subset of the states\n",
-    "- [has_negative_cycle](automaton.has_negative_cycle.ipynb) - whether the automaton has negative cycles\n",
+    "- [has_lightening_cycle](automaton.has_lightening_cycle.ipynb) - whether the automaton has lightening cycles\n",
     "- [has_twins_property](automaton.has_twins_property.ipynb) - a condition for determinizability in tropical semirings\n",
     "- [infiltration](automaton.infiltration.ipynb) - infiltration product of two automata\n",
     "- [info](automaton.info.ipynb) - a dictionary of facts about an automaton\n",
