@@ -26,8 +26,8 @@
     "## equation automaton\n",
     "See derived-term automaton.\n",
     "\n",
-    "## has_negative_cycle\n",
-    "A negative cycle is a path from a state to itself that is either negative (for $\\mathbb{Q}$, $\\mathbb{R}$ and $\\mathbb{Z}$), or between 0 and 1 (for $\\mathbb{Q}$, $\\mathbb{R}$ and $\\mathbb{R}_\\text{min}$).\n",
+    "## has_lightening_cycle\n",
+    "A lightening cycle is a path from a state to itself that is either negative (for $\\mathbb{Q}$, $\\mathbb{R}$ and $\\mathbb{Z}$), or between 0 and 1 (for $\\mathbb{Q}$, $\\mathbb{R}$ and $\\mathbb{R}_\\text{min}$).\n",
     "\n",
     "## is_free\n",
     "A labelset is free if the labels are only \"letters\".  This is a requirement for algorithms such as `determinize`, `evaluate`.\n",
