@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# _`automaton`_`.has_negative_cycle`\n",
+    "# _`automaton`_`.has_lightening_cycle`\n",
     "\n",
-    "Whether an automaton has negative cycles (i.e. contains at least one negative path between a state and itself).\n",
+    "Whether an automaton has lightening cycles (i.e. contains at least one cycle that would decrease the weight of a path).\n",
     "\n",
     "Uses the Bellman-Ford algorithm."
    ]
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "aut('\\e', 'lal_char, zmin').has_negative_cycle()"
+    "aut('\\e', 'lal_char, zmin').has_lightening_cycle()"
    ]
   },
   {
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "aut('(<-1>a)*', 'lal_char, zmin').has_negative_cycle()"
+    "aut('(<-1>a)*', 'lal_char, zmin').has_lightening_cycle()"
    ]
   },
   {
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "aut('a*', 'lal_char, zmin').has_negative_cycle()"
+    "aut('a*', 'lal_char, zmin').has_lightening_cycle()"
    ]
   },
   {
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "aut('(<0.5>a)*', 'lal_char, r').has_negative_cycle()"
+    "aut('(<0.5>a)*', 'lal_char, r').has_lightening_cycle()"
    ]
   },
   {
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "aut('(<1.5>a)*', 'lal_char, r').has_negative_cycle()"
+    "aut('(<1.5>a)*', 'lal_char, r').has_lightening_cycle()"
    ]
   }
  ],
