@@ -8,20 +8,20 @@
 namespace vcsn
 {
 
-  /*---------------------.
-  | has_negative_cycle.  |
-  `---------------------*/
+  /*-----------------------.
+  | has_lightening_cycle.  |
+  `-----------------------*/
 
   template <Automaton Aut>
-  std::enable_if_t<weightset_t_of<Aut>::can_have_negative_cycle(), bool>
-  has_negative_cycle(const Aut& aut)
+  std::enable_if_t<weightset_t_of<Aut>::can_have_lightening_cycle(), bool>
+  has_lightening_cycle(const Aut& aut)
   {
     return !detail::bellman_ford_impl(aut, aut->pre());
   }
 
   template <Automaton Aut>
-  std::enable_if_t<!weightset_t_of<Aut>::can_have_negative_cycle(), bool>
-  has_negative_cycle(const Aut& aut)
+  std::enable_if_t<!weightset_t_of<Aut>::can_have_lightening_cycle(), bool>
+  has_lightening_cycle(const Aut& aut)
   {
     return false;
   }
@@ -32,10 +32,10 @@ namespace vcsn
     {
       /// Bridge
       template <Automaton Aut>
-      bool has_negative_cycle(const automaton& aut)
+      bool has_lightening_cycle(const automaton& aut)
       {
         const auto& a = aut->as<Aut>();
-        return ::vcsn::has_negative_cycle(a);
+        return ::vcsn::has_lightening_cycle(a);
       }
     }
   }
