@@ -118,7 +118,7 @@ namespace vcsn
 
     static constexpr bool is_commutative() { return true; }
     static constexpr bool is_idempotent() { return false; }
-    static constexpr bool can_have_negative_cycle() { return false; }
+    static constexpr bool can_have_lightening_cycle() { return false; }
 
     static constexpr bool show_one() { return false; }
 
