@@ -121,9 +121,9 @@ namespace vcsn
     const weightset_ptr& weightset() const { return ctx_.weightset(); }
 
     static constexpr bool is_commutative() { return false; }
-    static constexpr bool can_have_negative_cycle()
+    static constexpr bool can_have_lightening_cycle()
     {
-      return weightset_t::can_have_negative_cycle();
+      return weightset_t::can_have_lightening_cycle();
     }
 
     /// Remove the monomial of \a l in \a v.
